--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/syam00/offshore-data-leaks-app#readme",
   "dependencies": {
+    "config": "^3.3.6",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -24,5 +25,8 @@
     "morgan": "^1.10.0",
     "neo4j-driver": "^4.2.3",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "eslint": "^7.22.0"
   }
 }
